# Care-Agent

./: .gitignore  LICENSE  README.md  docker-compose.yml  index.html  render.yml  run.py
.github/workflows/: ci-cd.yml
backend/: .flake8  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  executor.py  explanation.py  llm_agent.py  memory.py  planner.py  retriever.py  tavily.py  wikipedia.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  chat.py  chronic.py  health.py  session.py
backend/app/core/: config.py  langgraph_workflow.py  logging_config.py  state.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  health_record.py  message.py
backend/app/schemas/: __init__.py  chat.py  session.py
backend/app/services/: __init__.py  chat_service.py  database_service.py
backend/app/tools/: __init__.py  duckduckgo_search.py  llm_client.py  pdf_loader.py  tavily_search.py  vector_store.py  wikipedia_search.py
backend/data/: build_chinese_pdf.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_edge_cases.py  test_app.py  test_coverage_gaps.py  test_database.py  test_logging.py  test_services.py  test_tools.py  test_workflow.py  test_workflow_routing.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/coverage/: clover.xml  coverage-final.json  index.html
notebook/: Fine Tuning LLM.ipynb  Model Train.ipynb  experiment.ipynb
(+11 files in other folders)
